<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_geral">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="156dp"
        android:layout_height="133dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/imagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icone_usuario" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputUsuario"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/shape_entrada"
        android:hint="@string/usuario"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputSIAPE"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/shape_entrada"
        android:hint="@string/codigo"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsuario" />

    <com.google.android.material.textfield.TextInputEditText
        android:textColor="@color/black"
        android:id="@+id/inputSenha"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/shape_entrada"
        android:hint="@string/senha"
        android:padding="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSIAPE" />

    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/shape_button"
        android:text="@string/confirma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSenha"
        app:layout_constraintVertical_bias="0.79" />
</androidx.constraintlayout.widget.ConstraintLayout>